src/objects/Order_Commissions__c.object
<CustomObject>
    <description>This object is defined to identify the Agents that are to receive commission for a specific order based on the Product and the standard or adjusted commission rates.</description>
    <fields>
        <fullName>Commission_Basis__c</fullName>
        <inlineHelpText>Most Rental commissions based at the Master Order Level. Some Custom / Split  commissions based on the Child Order. If this commission is based specifically on the individual child order, please select Child Order, and Edit the Child Order.</inlineHelpText>
        <label>Commission Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master Order</fullName>
                    <default>true</default>
                    <label>Master Order</label>
                </value>
                <value>
                    <fullName>Child Order</fullName>
                </value>
                <value>
                    <fullName>Sale Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Note__c</fullName>
        <inlineHelpText>Include small note regarding a custom commission rate.</inlineHelpText>
        <label>Custom Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Order_Commissions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this partner is scheduled for custom commissions for this order.</inlineHelpText>
        <label>Custom Order Commissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Master_OrderID__c</fullName>
        <formula>CASESAFEID(Order_for_Commission__r.Master_Order__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master OrderID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Order Commissions</relationshipLabel>
        <relationshipName>Order_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Record_Type__c</fullName>
        <formula>Order_for_Commission__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Commissionable Order RecordType</inlineHelpText>
        <label>Order Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_for_Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Applicable Order to be commissioned</inlineHelpText>
        <label>Order for Commission</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Order Commissions</relationshipLabel>
        <relationshipName>Order_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Agent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select a KV Partner Account as the Sales Agent.</inlineHelpText>
        <label>Sales Agent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an appropriate Partner Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>KV Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Commissions</relationshipLabel>
        <relationshipName>Order_Commissions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subsequent_Years_Commission_Rate__c</fullName>
        <inlineHelpText>Enter the Commission Rate for Subsequent Years</inlineHelpText>
        <label>Subsequent Years Commission Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year1_Commission__c</fullName>
        <inlineHelpText>Select the First Year Commission Rate for this order</inlineHelpText>
        <label>Year1 Commission</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Order Commissions</label>
    <listViews>
        <fullName>Order_Administration_Order_Commissions</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Administration</label>
        <queue>Order_Administration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OCOM-{0000}</displayFormat>
        <label>Commissionable Agents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Commision_Rate_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>If(Custom_Order_Commissions__c,OR( ISNULL(Year1_Commission__c),ISNULL(Subsequent_Years_Commission_Rate__c)),false)</errorConditionFormula>
        <errorMessage>Please update custom commission values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Commision_Product_Validation</fullName>
        <active>true</active>
        <description>Sale Orders do not have a Product, but Rental Orders must have a product for Order Commissions. Validate there is an Order Product if it is NOT a Sale Order.</description>
        <errorConditionFormula>AND(OR( ISPICKVAL(Commission_Basis__c , &quot;Master Order&quot;)),
(ISPICKVAL(Commission_Basis__c , &quot;Child Order&quot;)),  
(ISNULL( Order_Product__c )))</errorConditionFormula>
        <errorMessage>Please add a Product for Rental Orders</errorMessage>
    </validationRules>
</CustomObject>